Add meta data for LinkedIn Portfolio picture

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #f4f5f7;">
+<html lang="en" style="background-color: #f4f5f7">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
@@ -9,6 +9,17 @@
       name="Masa's portfolio"
       content="Welcome to my portfolio and I hope you will become happy to see all thesecontents. Website is created of React javascript framework, Tailwind css framework and Redux state management tool. Additionally, I would like to make fun of you with my game made with javascript. Please check this out."
     />
+    <!-- ------------------LinkedIn Profile Thumbnail---------------------------- -->
+
+    <meta name="description" content="_" />
+    <meta name="title" property="og:title" content="_" />
+    <meta property="og:type" content="_" />
+    <meta name="image" property="og:image" content="../img/myPhoto/mypic1.JPEG" />
+    <meta name="description" property="og:description" content="_" />
+    <meta name="author" content="_" />
+
+    <!-- ------------------End--------------------------------------------------- -->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>No code, No life , Masa's Portfolio</title>
