Add meta data for LinkedIn Portfolio picture

--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+    <!-- <meta
       name="Masa's portfolio"
       content="Welcome to my portfolio and I hope you will become happy to see all thesecontents. Website is created of React javascript framework, Tailwind css framework and Redux state management tool. Additionally, I would like to make fun of you with my game made with javascript. Please check this out."
-    />
+    /> -->
     <!-- ------------------LinkedIn Profile Thumbnail---------------------------- -->
 
     <meta name="description" content="_" />
     <meta name="title" property="og:title" content="_" />
     <meta property="og:type" content="_" />
-    <meta name="image" property="og:image" content="../img/myPhoto/mypic1.JPEG" />
+    <meta name="image" property="og:image" content="./img/myPhoto/mypic1.JPEG" />
     <meta name="description" property="og:description" content="_" />
     <meta name="author" content="_" />
 
