Add meta data for LinkedIn Portfolio picture

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="_" />
     <meta name="title" property="og:title" content="_" />
     <meta property="og:type" content="_" />
-    <meta name="image" property="og:image" content="img/myPhoto/mypic1.JPEG" />
+    <meta name="image" property="og:image" content="https://masa-portfoliotemptest.herokuapp.com/img/work/work4.jpg" />
     <meta name="description" property="og:description" content="_" />
     <meta name="author" content="_" />
 
