Add meta data for LinkedIn Portfolio pictur4

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" style="background-color: #f4f5f7">
+<html lang="en" prefix="og: http://ogp.me/ns#" style="background-color: #f4f5f7">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    
-    <meta property="og:title" content="Title of the article" />
-    <meta property="og:image" content="https://masa-portfoliotemptest.herokuapp.com/img/work/work2.jpg" />
-    <meta
-      property="og:description"
-      content="Description that will show in the preview"
-    />
+
+    <meta property="og:title" content="Example Title" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/work4.jpg" />
+    <meta name="author" content="Example Author" />
+    <meta property="og:description" content="Example Description" />
     <meta property="og:url" content="https://masa-portfoliotemptest.herokuapp.com/" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>No code, No life , Masa's Portfolio</title>
   </head>
