Add meta data for LinkedIn Portfolio pictur5

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="Masa's portfolio"
+      content="Welcome to my portfolio and I hope you will become happy to see all thesecontents. Website is created of React javascript framework, Tailwind css framework and Redux state management tool. Additionally, I would like to make fun of you with my game made with javascript. Please check this out."
+    />
 
-    <meta property="og:title" content="Example Title" />
-    <meta name="image" property="og:image" content="%PUBLIC_URL%/work4.jpg" />
+    <meta property="og:title" content="Portfolio" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/img/opgImage.jpg" />
     <meta name="author" content="Example Author" />
-    <meta property="og:description" content="Example Description" />
+    <meta property="og:description" content="Masa's portfolio" />
     <meta property="og:url" content="https://masa-portfoliotemptest.herokuapp.com/" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
