Add meta data for LinkedIn Portfolio pictur6

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Masa's portfolio"
-      content="Welcome to my portfolio and I hope you will become happy to see all thesecontents. Website is created of React javascript framework, Tailwind css framework and Redux state management tool. Additionally, I would like to make fun of you with my game made with javascript. Please check this out."
+      content="Welcome to my portfolio and I hope you will become happy to see all thesecontents."
     />
 
     <meta property="og:title" content="Portfolio" />
