Add meta data for LinkedIn Portfolio pictur7

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Masa's portfolio"
-      content="Welcome to my portfolio and I hope you will become happy to see all thesecontents."
+      content="Welcome to my portfolio and I hope you will become happy to see all thesecontents. Website is created of React javascript framework, Tailwind css framework and Redux state management tool. Additionally, I would like to make fun of you with my game made with javascript. Please check this out."
     />
 
     <meta property="og:title" content="Portfolio" />
     <meta name="image" property="og:image" content="%PUBLIC_URL%/img/opgImage.jpg" />
     <meta name="author" content="Example Author" />
-    <meta property="og:description" content="Masa's portfolio" />
+    <meta property="og:description" content="Welcome to my portfolio and I hope you will become happy to see all thesecontents. Website is created of React javascript framework, Tailwind css framework and Redux state management tool. Additionally, I would like to make fun of you with my game made with javascript. Please check this out." />
     <meta property="og:url" content="https://masa-portfoliotemptest.herokuapp.com/" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
