Try to debug,not submitted comment 6

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,19 @@
     <title>No code, No life , Masa's Portfolio</title>
   </head>
   <body>
-    
+    <form name="contact-form" netlify netlify-honeypot="bot-field" action="/" hidden>
+      <input
+      type="text"
+      placeholder=""
+      name="name"
+      ></input>
+      <input
+      type="text"
+      placeholder=""
+      name="email"
+      ></input>
+      
+    </form>
     <noscript>Doesn't work some of script</noscript>
     <div id="root"></div>
   </body>
