Try to debug,not submitted comment 7

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,10 @@
       placeholder=""
       name="email"
       ></input>
-      
+      <textarea
+      placeholder=""
+      name="comment"
+      ></textarea>
     </form>
     <noscript>Doesn't work some of script</noscript>
     <div id="root"></div>
