--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
       ></textarea>
     </form>
     <noscript>Doesn't work some of script</noscript>
+    <div id="overlays">
     <div id="root"></div>
   </body>
 </html>
