Add Google analytics to comfirm number of user access and so on.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,18 @@
     <meta property="og:url" content="https://masa-portfoliotemptest.herokuapp.com/" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>No code, No life , Masa's Portfolio</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WG1Y0PG7BY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WG1Y0PG7BY');
+    </script>
+    
+    <title>Masa's Portfolio</title>
   </head>
   <body>
     <form name="contact-form" netlify netlify-honeypot="bot-field" action="/" hidden>
