--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,18 @@
 
       gtag('config', 'G-WG1Y0PG7BY');
     </script>
-    
+    <!-- Hotjar Tracking Code for https://masaportfolio.netlify.app/ -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:3779149,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>    
+
     <title>Masa's Portfolio</title>
   </head>
   <body>
@@ -37,12 +48,12 @@
       type="text"
       placeholder=""
       name="name"
-      ></input>
+      />
       <input
       type="text"
       placeholder=""
       name="email"
-      ></input>
+      />
       <textarea
       placeholder=""
       name="comment"
