Tweaked URL for Hotjar

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
       gtag('config', 'G-WG1Y0PG7BY');
     </script>
-    <!-- Hotjar Tracking Code for https://masaportfolio.netlify.app/ -->
+    <!-- Hotjar Tracking Code for https://masaportfolio.netlify.app -->
     <script>
       (function(h,o,t,j,a,r){
           h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
