デバッグスイッチ機能を追加

--- a/public/index.html
+++ b/public/index.html
@@ -62,5 +62,8 @@
     <noscript>Doesn't work some of script</noscript>
     <div id="overlays">
     <div id="root"></div>
+    
+    <!-- Debug utilities for development -->
+    <script src="%PUBLIC_URL%/debug-utils.js"></script>
   </body>
 </html>
